[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://BasicEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Starry background.png" type="Texture" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://StarLayer.gd" type="Script" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
enemy_scene = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -40, -64 )
can_shoot = false

[node name="EnemySpawnPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2( 1024, 567.075 )
rotation = 1.57078
scale = Vector2( 1.0078, 0.970368 )
offset = 566.309

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 512, 304 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="StarLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1200, 0 )
script = ExtResource( 6 )
scroll_speed = 150.0
scroll_speed_increment = 10.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/StarLayer"]
position = Vector2( 504, 352 )
texture = ExtResource( 4 )

[node name="IncrementTimer" type="Timer" parent="ParallaxBackground/StarLayer"]
wait_time = 0.1
one_shot = true

[connection signal="update_score" from="." to="HUD" method="_on_Main_update_score"]
[connection signal="health" from="Player" to="HUD" method="_on_Player_health"]
[connection signal="player_death" from="Player" to="." method="_on_Player_player_death"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="start_level" from="HUD" to="." method="_on_HUD_start_level"]
